# Roman-numeral-calculator

./: .coverage  README.md  pyproject.toml
Job posting/: firebaseauth.js  index.html  jobs.html  login.html  post.html  script.js  styles.css  submit-job.pnp
Rust/main1/: Cargo.toml
Rust/main1/src/: main.rs
scr/: main.py
test/: test_*.py  test_calculator.py
