[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = "-v --cov=main --cov-report=term-missing"  # Enable verbose output and coverage report
testpaths = ["test"]  # Specify where to find test files

[tool.black]
line-length = 88  # Set the maximum line length for Black formatter

[tool.mypy]
files = "main.py,test"  # Specify files or directories to type-check

[tool.flake8]
max-line-length = 88  # Set max line length for Flake8 (default is 79)
